--- a/index.html
+++ b/index.html
@@ -112,6 +112,139 @@
   visibility: visible; /* Show the front when flipped */
 }
 
+@media (max-width: 480px) {
+  .card {
+    width: 70px; /* Smaller cards for very small screens */
+    height: 100px;
+  }
+
+  h1 {
+    font-size: 18px; /* Smaller headings for very small screens */
+  }
+
+  button {
+    font-size: 12px; /* Adjust button font size for smaller screens */
+  }
+
+  #game-board {
+    grid-gap: 5px; /* Reduce gap between cards for very small screens */
+  }
+}
+/* For large tablets and small desktops (landscape) */
+@media (max-width: 1024px) {
+  body {
+    flex-direction: column;
+    padding: 10px;
+  }
+
+  h1 {
+    font-size: 1.8em;
+  }
+
+  .stats {
+    width: 90%;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  #game-board {
+    grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+    grid-gap: 10px;
+  }
+
+  .card {
+    width: 90px;
+    height: 135px;
+  }
+}
+
+/* For tablets (portrait) */
+@media (max-width: 768px) {
+  h1 {
+    font-size: 1.6em;
+  }
+
+  .stats {
+    flex-direction: column;
+    gap: 10px;
+  }
+
+  #game-board {
+    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+    grid-gap: 8px;
+  }
+
+  .card {
+    width: 80px;
+    height: 120px;
+  }
+
+  button {
+    font-size: 14px;
+    padding: 8px 16px;
+  }
+}
+
+/* For large smartphones */
+@media (max-width: 576px) {
+  body {
+    padding: 5px;
+  }
+
+  h1 {
+    font-size: 1.4em;
+    text-align: center;
+  }
+
+  .stats {
+    flex-direction: column;
+    width: 100%;
+    text-align: center;
+    gap: 5px;
+  }
+
+  #game-board {
+    grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
+    grid-gap: 6px;
+  }
+
+  .card {
+    width: 70px;
+    height: 100px;
+  }
+
+  button {
+    font-size: 12px;
+    padding: 6px 12px;
+  }
+}
+
+/* For small smartphones */
+@media (max-width: 400px) {
+  h1 {
+    font-size: 1.2em;
+  }
+
+  .stats {
+    gap: 5px;
+  }
+
+  #game-board {
+    grid-template-columns: repeat(auto-fit, minmax(60px, 1fr));
+    grid-gap: 5px;
+  }
+
+  .card {
+    width: 60px;
+    height: 90px;
+  }
+
+  button {
+    font-size: 10px;
+    padding: 5px 10px;
+  }
+}
+
   </style>
 </head>
 <body>
