--- a/index.html
+++ b/index.html
@@ -255,11 +255,11 @@
   </div>
   <div id="game-board"></div>
   <button id="restart-btn">Restart Game</button>
-  <!-- <a href="memory_card3.html" style="text-decoration: none;">
+  <a href="memory_card3.html" style="text-decoration: none;">
     <button style="background: #4CAF50; color: white; padding: 6px 32px; font-size: 16px; border: none; border-radius: 4px; cursor: pointer;">
       Next Page
     </button>
-  </a> -->
+  </a>
   
 
   <script>
